# computergrafik

OpenGLFramework/: .gitignore  CMakeLists.txt  README.md
OpenGLFramework/application/include/: application_fixed.hpp  application_indexed.hpp  application_shader.hpp  application_solar.hpp  application_uniform.hpp  application_vao.hpp  application_vbo.hpp
OpenGLFramework/application/source/: application_fixed.cpp  application_indexed.cpp  application_shader.cpp  application_solar.cpp  application_uniform.cpp  application_vao.cpp  application_vbo.cpp
OpenGLFramework/framework/include/: application.hpp  launcher.hpp  model.hpp  model_loader.hpp  pixel_data.hpp  shader_loader.hpp  structs.hpp  texture_loader.hpp  utils.hpp
OpenGLFramework/framework/source/: application.cpp  launcher.cpp  model.cpp  model_loader.cpp  shader_loader.cpp  texture_loader.cpp  utils.cpp
OpenGLFramework/resources/shaders/: black.frag  celshading.frag  celshading.vert  emulation.frag  emulation.vert  god.frag  god.vert  orbit.frag  orbit.vert  planet.frag  planet.vert  screenquad.frag  screenquad.vert  simple.frag  simple.vert  skybox.frag  skybox.vert  starlight.frag  starlight.vert  sun.frag  sun.vert  sun_cel.frag  sun_cel.vert  uniform.vert  vao.vert  white.frag  white.vert
OpenGLFramework/utils/: OpenGLFramework.sublime-project
